[tool.poetry]
name = "beancount-script"
version = "1.0.0"
description = "Scripts I use for my accounting using beancount"
authors = ["Mayeu <m@mayeu.me>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
beancount = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
